Add Complete AI Automation Suite pricing box

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
                 <p style="margin-top: 15px; color: #666;">Instant digital delivery • No refunds on digital products • Lifetime access</p>
                 <a href="https://buy.stripe.com/eVq9AT1t73ww4avajMds40m" class="cta-button">UPGRADE - $197</a>
             </div>
+            		<div class="pricing-box" style="border-color: #764ba2; background: linear-gradient(135deg, rgba(118, 75, 162, 0.15) 0%, rgba(102, 126, 234, 0.1) 100%);">
+                        			<h3>Complete AI Automation Suite</h3>
+                        			<p class="price">$497</p>
+                        			<p><strong>EVERYTHING in Business Bundle +</strong></p>
+                        			<ul style="text-align: left; display: inline-block; margin: 15px 0;">
+                                        			<li>Done-for-you automation setup</li>
+                                        			<li>Advanced AI integration workflows</li>
+                                        			<li>Custom implementation support</li>
+                                        			<li>Quarterly strategy sessions</li>
+                                        			<li>Direct email support</li>
+                                        			</ul>
+                        			<p style="margin-top: 15px; color: #666;">Instant digital delivery • Lifetime access • Premium support included</p>
+                        			<a href="https://buy.stripe.com/14AaEX3Bf9UU1EjbnQds40r" class="cta-button">GET COMPLETE SUITE - $497</a>
+                        		</div>
         </section>
 
         <section class="legal">
