--- a/index.html
+++ b/index.html
@@ -1,106 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Payday Playbook - 52-Week AI Automation Roadmap</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: #f8f9fa; }
-        .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        header { text-align: center; padding: 40px 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border-radius: 10px; margin-bottom: 40px; }
-        h1 { font-size: 2.5em; margin-bottom: 10px; }
-        .tagline { font-size: 1.2em; opacity: 0.9; margin-bottom: 20px; }
-        .hero-text { font-size: 1.1em; margin: 20px 0; }
-        .features { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 40px 0; }
-        .feature-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-        .feature-card h3 { color: #667eea; margin-bottom: 10px; }
-        .price-section { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin: 40px 0; }
-        .pricing-box { background: #f8f9fa; border: 2px solid #667eea; border-radius: 8px; padding: 30px; margin: 20px 0; text-align: center; }
-        .price { font-size: 2.5em; color: #667eea; font-weight: bold; }
-        .cta-button { display: inline-block; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px 40px; border: none; border-radius: 5px; font-size: 1.1em; cursor: pointer; text-decoration: none; margin: 20px 10px; transition: transform 0.3s; }
-        .cta-button:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4); }
-        .legal { background: #f0f0f0; padding: 20px; border-radius: 8px; margin: 30px 0; font-size: 0.9em; color: #666; }
-        footer { text-align: center; padding: 20px; color: #999; font-size: 0.9em; margin-top: 40px; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>AI Payday Playbook</h1>
-            <p class="tagline">52-Week AI Automation Roadmap</p>
-            <p class="hero-text">Get the complete blueprint for automating your business with AI and earning your first $10K+ per month</p>
-        </header>
-
-        <section class="features">
-            <div class="feature-card">
-                <h3>✓ 52-Week Roadmap</h3>
-                <p>Week-by-week automation strategies for AI-powered growth. Complete implementation guide.</p>
-            </div>
-            <div class="feature-card">
-                <h3>✓ Proven Systems</h3>
-                <p>Battle-tested AI workflows and automation sequences. Ready to implement immediately.</p>
-            </div>
-            <div class="feature-card">
-                <h3>✓ Instant Access</h3>
-                <p>Download your complete playbook instantly. No waiting, no delays. Start today.</p>
-            </div>
-            <div class="feature-card">
-                <h3>✓ Bonus Resources</h3>
-                <p>12+ traffic scripts, email templates, and conversion optimization guides included.</p>
-            </div>
-        </section>
-
-        <section class="price-section">
-            <h2 style="text-align: center; margin-bottom: 30px;">Choose Your Investment Level</h2>
-            
-            <div class="pricing-box">
-                <h3>Starter Bundle</h3>
-                <p class="price">$47</p>
-                <p><strong>AI Payday Playbook</strong> (52-week complete roadmap)</p>
-                <p style="margin-top: 15px; color: #666;">Instant digital delivery • No refunds on digital products • Lifetime access</p>
-                <a href="https://buy.stripe.com/4gM3cvdbPaYYer50Jcds40l" class="cta-button">GET STARTED - $47</a>
-            </div>
-
-            <div class="pricing-box" style="border-color: #764ba2; background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);">
-                <h3>Business Automation Bundle</h3>
-                <p class="price">$197</p>
-                <p><strong>EVERYTHING in Starter +</strong></p>
-                <ul style="text-align: left; display: inline-block; margin: 15px 0;">
-                    <li>Advanced automation workflows</li>
-                    <li>Email marketing templates</li>
-                    <li>Sales funnel blueprints</li>
-                    <li>Priority support</li>
-                </ul>
-                <p style="margin-top: 15px; color: #666;">Instant digital delivery • No refunds on digital products • Lifetime access</p>
-                <a href="https://buy.stripe.com/eVq9AT1t73ww4avajMds40m" class="cta-button">UPGRADE - $197</a>
-            </div>
-            		<div class="pricing-box" style="border-color: #764ba2; background: linear-gradient(135deg, rgba(118, 75, 162, 0.15) 0%, rgba(102, 126, 234, 0.1) 100%);">
-                        			<h3>Complete AI Automation Suite</h3>
-                        			<p class="price">$497</p>
-                        			<p><strong>EVERYTHING in Business Bundle +</strong></p>
-                        			<ul style="text-align: left; display: inline-block; margin: 15px 0;">
-                                        			<li>Done-for-you automation setup</li>
-                                        			<li>Advanced AI integration workflows</li>
-                                        			<li>Custom implementation support</li>
-                                        			<li>Quarterly strategy sessions</li>
-                                        			<li>Direct email support</li>
-                                        			</ul>
-                        			<p style="margin-top: 15px; color: #666;">Instant digital delivery • Lifetime access • Premium support included</p>
-                        			<a href="https://buy.stripe.com/14AaEX3Bf9UU1EjbnQds40r" class="cta-button">GET COMPLETE SUITE - $497</a>
-                        		</div>
-        </section>
-
-        <section class="legal">
-            <h4>Legal Compliance & Product Terms</h4>
-            <p><strong>All sales are FINAL.</strong> This is a digital product with immediate delivery. Per FTC digital goods guidelines, <strong>no refunds</strong> are available after purchase and instant download of your materials.</p>
-            <p style="margin-top: 10px;">By purchasing, you agree to our terms: (1) Digital goods are delivered instantly and non-refundable, (2) You receive lifetime access to all materials, (3) These are educational materials not guarantees of results, (4) Your results depend on your effort and implementation.</p>
-            <p style="margin-top: 10px;"><strong>Money-back guarantee:</strong> If technical issues prevent download within 24 hours, contact support for full refund. No other refunds applicable.</p>
-        </section>
-
-        <footer>
-            <p>&copy; 2025 AI Payday Playbook. All rights reserved. | <a href="#" style="color: #667eea; text-decoration: none;">Privacy Policy</a> | <a href="#" style="color: #667eea; text-decoration: none;">Terms of Service</a></p>
-        </footer>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>365 AI Automation Roadmap - Master AI in One Year</title><style>* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: linear-gradient(135deg, #0a0e27 0%, #1a1f3a 100%); }.container { max-width: 1200px; margin: 0 auto; padding: 20px; }header { text-align: center; padding: 60px 20px; background: linear-gradient(135deg, #00d4ff 0%, #667eea 50%, #764ba2 100%); color: white; border-radius: 15px; margin-bottom: 50px; box-shadow: 0 20px 60px rgba(0, 212, 255, 0.3); }h1 { font-size: 3.5em; margin-bottom: 10px; font-weight: 900; text-shadow: 0 4px 15px rgba(0,0,0,0.3); }.tagline { font-size: 1.3em; opacity: 0.95; margin-bottom: 20px; font-weight: 600; }.hero-text { font-size: 1.15em; margin: 20px 0; opacity: 0.9; }.features { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin: 50px 0; }.feature-card { background: rgba(255, 255, 255, 0.08); padding: 30px; border-radius: 12px; border: 1px solid rgba(0, 212, 255, 0.2); backdrop-filter: blur(10px); transition: all 0.3s ease; }.feature-card:hover { transform: translateY(-5px); background: rgba(255, 255, 255, 0.12); border-color: rgba(0, 212, 255, 0.4); box-shadow: 0 10px 30px rgba(0, 212, 255, 0.2); }.feature-card h3 { color: #00d4ff; margin-bottom: 10px; font-size: 1.3em; }.pricing-section { margin: 50px 0; }.section-header { text-align: center; margin: 60px 0 40px; }.section-header h2 { font-size: 2.8em; color: white; margin-bottom: 10px; font-weight: 900; background: linear-gradient(90deg, #00d4ff, #667eea, #764ba2); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }.section-header p { font-size: 1.1em; color: rgba(255, 255, 255, 0.7); margin-top: 10px; }.pricing-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin: 30px 0; }.pricing-box { background: rgba(255, 255, 255, 0.05); border: 2px solid; border-radius: 12px; padding: 35px; text-align: center; transition: all 0.3s ease; position: relative; overflow: hidden; backdrop-filter: blur(10px); }.pricing-box::before { content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, transparent 0%, rgba(0, 212, 255, 0.1) 100%); opacity: 0; transition: opacity 0.3s ease; pointer-events: none; }.pricing-box:hover::before { opacity: 1; }.pricing-box:hover { transform: translateY(-8px); box-shadow: 0 15px 40px rgba(0, 212, 255, 0.3); }.pricing-box-basic { border-color: #667eea; color: white; }.pricing-box-pro { border-color: #00d4ff; background: rgba(0, 212, 255, 0.08); }.pricing-box-premium { border-color: #764ba2; background: rgba(118, 75, 162, 0.08); }.price { font-size: 3em; color: #00d4ff; font-weight: bold; margin: 15px 0; }.pricing-box-premium .price { color: #764ba2; }.pricing-box-pro .price { color: #00d4ff; }.price-label { font-size: 1.1em; color: rgba(255, 255, 255, 0.8); margin-bottom: 15px; font-weight: 600; }.price-description { font-size: 0.95em; color: rgba(255, 255, 255, 0.8); margin: 15px 0; line-height: 1.6; }.price-includes { text-align: left; display: inline-block; margin: 20px 0; list-style: none; }.price-includes li { color: rgba(255, 255, 255, 0.85); padding: 8px 0; font-size: 0.95em; }.price-includes li:before { content: '✓ '; color: #00d4ff; font-weight: bold; margin-right: 8px; }.price-includes li.premium:before { color: #764ba2; }.cta-button { display: inline-block; background: linear-gradient(135deg, #00d4ff 0%, #667eea 100%); color: white; padding: 16px 45px; border: none; border-radius: 8px; font-size: 1.05em; cursor: pointer; text-decoration: none; margin: 20px 10px 0; transition: all 0.3s ease; font-weight: 600; box-shadow: 0 10px 25px rgba(0, 212, 255, 0.3); }.cta-button:hover { transform: translateY(-3px); box-shadow: 0 15px 35px rgba(0, 212, 255, 0.5); }.cta-button.premium { background: linear-gradient(135deg, #764ba2 0%, #667eea 100%); }.legal { background: rgba(255, 255, 255, 0.05); padding: 30px; border-radius: 12px; margin: 50px 0; font-size: 0.9em; color: rgba(255, 255, 255, 0.8); border-left: 4px solid #00d4ff; backdrop-filter: blur(10px); }.legal h4 { color: #00d4ff; margin-bottom: 15px; font-size: 1.1em; }.legal p { margin-bottom: 12px; line-height: 1.7; }.legal strong { color: rgba(255, 255, 255, 0.95); }footer { text-align: center; padding: 30px; color: rgba(255, 255, 255, 0.6); font-size: 0.9em; margin-top: 50px; border-top: 1px solid rgba(255, 255, 255, 0.1); }</style></head><body><div class="container"><header><h1>365 AI Automation Roadmap</h1><p class="tagline">Your Complete Blueprint for AI Mastery</p><p class="hero-text">Learn exactly how to automate your business with AI throughout the entire year. Get instant access to the complete 365-day strategy.</p></header><section class="features"><div class="feature-card"><h3>✓ Day-by-Day Automation</h3><p>Complete week-by-week strategy for AI-powered automation. Every single day mapped out with actionable steps.</p></div><div class="feature-card"><h3>✓ Proven AI Workflows</h3><p>Battle-tested automation sequences. Real workflows that actually work. Ready to implement immediately.</p></div><div class="feature-card"><h3>✓ Instant Access</h3><p>Download your complete roadmap instantly. No waiting, no delays. Start your automation journey today.</p></div><div class="feature-card"><h3>✓ Bonus Resources</h3><p>12+ complete traffic scripts, email templates, conversion optimization guides, and AI implementation checklists.</p></div></section><section class="pricing-section"><div class="section-header"><h2>Choose Your Perfect Plan</h2><p>Select the investment level that matches your goals</p></div><div class="pricing-grid"><div class="pricing-box pricing-box-basic"><h3>Starter</h3><p class="price-label">365 AI Automation Roadmap</p><p class="price">$47</p><p class="price-description">Complete 365-day AI automation blueprint</p><p class="price-description" style="font-size: 0.85em; color: rgba(255, 255, 255, 0.7); margin: 15px 0;">Instant delivery • Lifetime access</p><a href="https://buy.stripe.com/4gM3cvdbPaYYer50Jcds40l" class="cta-button">GET STARTED - $47</a></div><div class="pricing-box pricing-box-pro"><h3>Professional</h3><p class="price-label">365 AI + Tools & Implementation</p><p class="price">$197</p><p class="price-description">Everything in Starter plus:</p><ul class="price-includes"><li>Advanced automation workflows</li><li>Ready-to-use email templates</li><li>Sales funnel blueprints</li><li>Priority implementation support</li></ul><p class="price-description" style="font-size: 0.85em; color: rgba(255, 255, 255, 0.7); margin: 15px 0;">Instant delivery • Lifetime access</p><a href="https://buy.stripe.com/eVq9AT1t73ww4avajMds40m" class="cta-button">UPGRADE - $197</a></div><div class="pricing-box pricing-box-premium"><h3>Complete Suite</h3><p class="price-label">Full Automation Mastery Program</p><p class="price">$497</p><p class="price-description">Everything in Professional plus:</p><ul class="price-includes"><li class="premium">Done-for-you setup & configuration</li><li class="premium">Advanced AI integration workflows</li><li class="premium">Custom implementation support</li><li class="premium">Quarterly strategy sessions</li><li class="premium">Direct email support (priority)</li></ul><p class="price-description" style="font-size: 0.85em; color: rgba(255, 255, 255, 0.7); margin: 15px 0;">Instant delivery • Lifetime access</p><a href="https://buy.stripe.com/14AaEX3Bf9UU1EjbnQds40r" class="cta-button premium">GET COMPLETE SUITE - $497</a></div></div></section><section class="legal"><h4>Legal Compliance & Product Terms</h4><p><strong>Digital Product Delivery:</strong> All products are delivered instantly upon purchase. You will receive immediate access to all materials via download.</p><p><strong>Lifetime Access:</strong> Your purchase grants you unlimited lifetime access to all materials and resources included in your selected tier.</p><p><strong>Educational Material:</strong> All content is educational in nature. Results depend on your individual effort, implementation, and market conditions. We do not guarantee specific financial results.</p><p><strong>No Refunds Policy:</strong> Due to the immediate digital delivery and instant access nature of this product, all sales are final. Please review the product details carefully before purchasing.</p><p><strong>Support & Issues:</strong> If you experience any technical issues preventing access within 24 hours of purchase, please contact support immediately for full assistance.</p><p style="margin-top: 20px; opacity: 0.7;">© 2025 365 AI Automation. All rights reserved. | <a href="#" style="color: #00d4ff; text-decoration: none;">Privacy Policy</a> | <a href="#" style="color: #00d4ff; text-decoration: none;">Terms of Service</a></p></section></div><footer><p>Start your 365-day AI automation journey today. Instant access. Lifetime value.</p></footer></body></html>
